# Roach2Software

./: .gitignore  CMakeLists.txt  README.md  Roach2_Firmware.sln
01_systemdesign/: expected_data_rate.xlsx  processor_options_nanopi_wireless.docx  systemdesign_rcu_201218.pptx  systemdesign_rcu_bericht_arbeitspaket_3.docx  vorschlag_rcu.pptx
01_systemdesign/_system layouts/: systemdesign_rcu.vpp  systemdesign_rcu.vpp.bak_000f  systemdesign_rcu.vpp.bak_001d  systemdesign_rcu.vpp.bak_002d
04_builds/: Nothing here yet!.rtf
Actuators/: Actuator.cpp  Actuator.h  GoPro.cpp  GoPro.h  HV.cpp  HV.h  PWM.h  Rover.h
Comm/: Connection.h  EthernetClient.cpp  EthernetClient.h  EthernetServer.h  ReceiveHandler.h  UART.cpp  UART.h  serversock.cpp  serversock.h
Control/: CommandParser.cpp  CommandParser.h  FSM_Controller.cpp  FSM_Controller.h  Sensor_Manager.cpp  Sensor_Manager.h
DataStore/: CMakeLists.txt  Data_Raw.cpp  Data_Raw.h  Data_simple.cpp  Data_simple.h  Data_super.cpp  Data_super.h  data.cpp  data.h  main.cpp  serialization.cpp
Hardware/: GPIODevice.cpp  GPIODevice.h  I2CDevice.h
OBC/: FSM_OBC.cpp  FSM_OBC.h
RCU/: FSM_RCU.h  main.cpp
Roach2_Actuators/: Actuartor_GoPro.h  Actuator.cpp  Actuator.h  Actuator_Engine.cpp  Actuator_Engine.h  Actuator_GoPro.cpp  Actuator_HV.cpp  Actuator_HV.h  Actuator_HoldingMech.cpp  Actuator_HoldingMech.h  GoPro.cpp  GoPro.h  HV.cpp  HV.h  PWM.cpp  PWM.h  Roach2_Actuators.vcxproj  Roach2_Actuators_Actuartor_GoPro.h  Roach2_Actuators_Actuator_GoPro.cpp  Roach2_Actuators_Actuator_HV.cpp  Roach2_Actuators_Actuator_HV.h  Roach2_Actuators_Actuator_Rover.cpp  Roach2_Actuators_Actuator_Rover.h  RocketSignals.cpp  RocketSignals.h  Rover.cpp  Rover.h  pwm_pca9658.cpp  pwm_pca9658.h
Roach2_Camera/: Roach2_Camera.vcxproj
Roach2_Comm/: Connection.h  EthernetClient.cpp  EthernetClient.h  EthernetServer.cpp  EthernetServer.h  ReceiveHandler.h  Roach2_Comm.vcxproj  Roach2_Comm.vcxproj.filters  RocketSignals.cpp  RocketSignals.h  UART.cpp  UART.h  clientsock.cpp  clientsock.h  main.cpp  serversock.cpp  socket.cpp
Roach2_Control/: CommandParser.cpp  CommandParser.h  Defines.h  FSM_Controller.cpp  FSM_Controller.h  Roach2_Control.vcxproj  Sensor_Manager.cpp  Sensor_Manager.h
Roach2_DataStore/: Data_Raw.cpp  Data_Raw.h  Data_simple.cpp  Data_simple.h  Data_super.cpp  Data_super.h  Roach2_DataStore.vcxproj  data.cpp  data.h  data_simple.cpp  data_simple.h  database.cpp  database.h  main.cpp  serialization.cpp  serialization.h
Roach2_DataStore/lib/: data.cpp  data.h  database.h
Roach2_Firmware/: FSM_OBC.cpp  FSM_OBC.h  Roach2_Firmware.vcxproj  main.cpp
Roach2_Hardware/: GPIODevice.cpp  GPIODevice.h  I2CDevice.cpp
Roach2_OBC/: FSM_OBC.cpp  FSM_OBC.h  Roach2_OBC.vcxproj  main.cpp
Roach2_Processing/: Roach2_Processing.vcxproj
Roach2_RCU/: FSM_RCU.cpp  FSM_RCU.h  Roach2_RCU.vcxproj  main.cpp
Roach2_Sensor/: ARM_Systeminfo.cpp  ARM_Systeminfo.h  IMU.cpp  IMU.h  LaserDist_VL530LX.cpp  LaserDist_VL530LX.h  OBC_Systemstatus.cpp  OBC_Systemstatus.h  RCU_Systemstatus.cpp  RCU_Systemstatus.h  Roach2_Sensor.vcxproj  Roach2_Sensor.vcxproj.filters  Roach2_Sensor_Sensor.cpp  Roach2_Sensor_Sensor.h  Roach2_Sensor_adc.cpp  Roach2_Sensor_adc.h  Roach2_Sensor_rotEnc.cpp  Roach2_Sensor_rotEnc.h  RocketSignals.cpp  RocketSignals.h  Sensor.cpp  Sensor.h  Temp.cpp  Temp.h  adc.cpp  adc.h  imu.cpp  imu_neu.cpp  imu_neu.h  rotEnc.cpp  rotEnc.h  temp.cpp
Roach2_Sensor_UnitTests/: Roach2_Sensor_UnitTests.vcxproj
Roach2_SysCheckUtil/: main.cpp
SQLite/: SQLite.vcxproj
Sensor/: ADC.cpp  ADC.h  ARM_Systeminfo.cpp  ARM_Systeminfo.h  IMU.cpp  IMU.h  LaserDist_VL530LX.cpp  LaserDist_VL530LX.h  OBC_Systemstatus.cpp  OBC_Systemstatus.h  RCU_Systemstatus.cpp  RCU_Systemstatus.h  RocketSignals.cpp  RocketSignals.h  RotaryEncoder.cpp  RotaryEncoder.h  Sensor.cpp  Sensor.h  Temp.h
Sensor/VL53L0X/: VL53L0X.cpp  VL53L0X.h
SysCheckUtil/: main.cpp
